refactor: :recycle: refactor entities
\